--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<h1>Controlling robotics with rclnodejs and ros2-web-bridge
 					</h1>
 					<p>
-						<button id="showMenu">Menu</button>
+						<button id="showMenu">MENU</button>
 					</p>
 					<div class="twodmap">
 						A 2D Map Renderer here
