--- a/workflow.html
+++ b/workflow.html
@@ -214,6 +214,7 @@
       arrowshow('.t4');
       await sleep(2000);
       roundshow('#r5', 'roundcolor');
+      await sleep(2000);
       roundshow('#r5', 'roundcolor2');
       arrowshow('.t5');
       await sleep(2000);
