--- a/index.html
+++ b/index.html
@@ -20,15 +20,11 @@
 		<div class="container">
 			<div class="wrapper">
 				<header class="ros-header">
-					<h1>Controlling robotics with rclnodejs and ros2-web-bridge
-					</h1>
-					<p>
+					<!-- <h1>Controlling robotics with rclnodejs and ros2-web-bridge
+					</h1> -->
+					<!-- <p>
 						<button id="showMenu">MENU</button>
-					</p>
-					<div class="twodmap" id="ros2dmap">
-					</div>
-				</header>
-				<div class="main clearfix">
+					</p> -->
 					<div class="columnleft">
 						<div class='controller'>
 							<div class='nx'>
@@ -73,25 +69,29 @@
 							</div>
 						</div>
 					</div>
-					<div class="columnright">
+					<div class="twodmap" id="ros2dmap">
+					</div>
+				</header>
+				<div class="main clearfix">
+
+					<!-- <div class="columnright"> -->
 						<div class="log" id="log">
 							<!-- Hello World! -->
 						</div>
-					</div>
+					<!-- </div> -->
 					<div class="related">
-						<p></p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<nav class="outer-nav top horizontal">
+		<!-- <nav class="outer-nav top horizontal">
 			<a href="index.html" class="icon-controller">Play</a>
 			<a href="workflow.html" class="icon-subscribe">Workflow</a>
 			<a href="#" class="icon-realsense">RealSense</a>
-		</nav>
+		</nav> -->
 	</div>
 	<script src="js/classie.js"></script>
-	<script src="js/menu.js"></script>
+	<!-- <script src="js/menu.js"></script> -->
 	<script src="js/eventemitter2.min.js"></script>
 	<script src="js/roslib.js"></script>
 	<script src="js/controller.js"></script>
